--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen-types": "npx supabase gen types typescript --local > ./src/types/database.types.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
